# geekdo-sync

./: .gitignore  README.md  flake.nix  justfile  main.py  pyproject.toml
.github/workflows/: flake-check.yaml
docs/dev/: grist_tables_schema.md  links.md
flake-parts/: nixos-modules.nix  nixosModules.nix  packages.nix  partitions.nix
grist/: README.md  Tabletop_Games_Template.grist
nix/: nixos-module.nix  uv-workspace.nix
nix/modules/: nixos-module.nix
src/: config.py  main.py  sync.py  utils.py
src/api/: __init__.py  extractors.py  models.py  xml_parser.py
src/geekdo/: client.py  extractors.py  models.py  schemas.py
src/geekdo_sync/: config.py  main.py  sync.py  utils.py
src/geekdo_sync/geekdo/: __init__.py  client.py  extractors.py  models.py  xml_parser.py
src/geekdo_sync/grist/: __init__.py  client.py  models.py  utils.py
src/grist/: client.py  models.py
