[project]
name = "geekdo-sync"
version = "0.1.0"
description = "A tool to sync BoardGameGeek & RPGGeek plays to Grist"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydantic-xml>=1.2.0",
    "pygrister>=0.9.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src"]

[project.scripts]
fetch-plays = "src.main:main"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff]
target-version = "py313"
line-length = 140

[tool.ruff.lint]
# Enable isort
extend-select = ["I"]
